cmake_minimum_required(VERSION 3.10)
project(ObserverRust)

set(CMAKE_CXX_STANDARD 11)

add_executable(ObserverRust
        src/main.rs
        target/debug/deps/libObserverRust-a3aadf8fd73c6d18.rmeta
        target/debug/deps/libObserverRust-f581f5996a6c485d.rmeta
        target/debug/deps/ObserverRust-a3aadf8fd73c6d18.d
        target/debug/deps/ObserverRust-edeac3eee7eedc3a
        target/debug/deps/ObserverRust-edeac3eee7eedc3a.d
        target/debug/deps/ObserverRust-f581f5996a6c485d.d
        target/debug/incremental/ObserverRust-1pmze1pc2rwr5/s-f4h8s9lgbd-1anl1n8-2w6xuhilk5zi7/16i0u6jlhoj1fwbo.o
        target/debug/incremental/ObserverRust-1pmze1pc2rwr5/s-f4h8s9lgbd-1anl1n8-2w6xuhilk5zi7/16u6js6g0l3k1ic6.o
        target/debug/incremental/ObserverRust-1pmze1pc2rwr5/s-f4h8s9lgbd-1anl1n8-2w6xuhilk5zi7/181cuta0v63atwcm.o
        target/debug/incremental/ObserverRust-1pmze1pc2rwr5/s-f4h8s9lgbd-1anl1n8-2w6xuhilk5zi7/1fn5wyzcwspf3n0b.o
        target/debug/incremental/ObserverRust-1pmze1pc2rwr5/s-f4h8s9lgbd-1anl1n8-2w6xuhilk5zi7/1im38lueib99jsk0.o
        target/debug/incremental/ObserverRust-1pmze1pc2rwr5/s-f4h8s9lgbd-1anl1n8-2w6xuhilk5zi7/1jnlhyxj59jycbjv.o
        target/debug/incremental/ObserverRust-1pmze1pc2rwr5/s-f4h8s9lgbd-1anl1n8-2w6xuhilk5zi7/1mvmz58owquyropc.o
        target/debug/incremental/ObserverRust-1pmze1pc2rwr5/s-f4h8s9lgbd-1anl1n8-2w6xuhilk5zi7/1q8ffos2d96smbjs.o
        target/debug/incremental/ObserverRust-1pmze1pc2rwr5/s-f4h8s9lgbd-1anl1n8-2w6xuhilk5zi7/1y16o1qfye96o7m0.o
        target/debug/incremental/ObserverRust-1pmze1pc2rwr5/s-f4h8s9lgbd-1anl1n8-2w6xuhilk5zi7/1zwd8n7bcl3vhvvh.o
        target/debug/incremental/ObserverRust-1pmze1pc2rwr5/s-f4h8s9lgbd-1anl1n8-2w6xuhilk5zi7/23tqyymcb18u96mb.o
        target/debug/incremental/ObserverRust-1pmze1pc2rwr5/s-f4h8s9lgbd-1anl1n8-2w6xuhilk5zi7/2jqywn86b2gsqohu.o
        target/debug/incremental/ObserverRust-1pmze1pc2rwr5/s-f4h8s9lgbd-1anl1n8-2w6xuhilk5zi7/2lyh15q6cjwzy18c.o
        target/debug/incremental/ObserverRust-1pmze1pc2rwr5/s-f4h8s9lgbd-1anl1n8-2w6xuhilk5zi7/3ayaeypdcro9d6yk.o
        target/debug/incremental/ObserverRust-1pmze1pc2rwr5/s-f4h8s9lgbd-1anl1n8-2w6xuhilk5zi7/3rngp6bm2u2q5z0y.o
        target/debug/incremental/ObserverRust-1pmze1pc2rwr5/s-f4h8s9lgbd-1anl1n8-2w6xuhilk5zi7/48721dc4k5qxei0u.o
        target/debug/incremental/ObserverRust-1pmze1pc2rwr5/s-f4h8s9lgbd-1anl1n8-2w6xuhilk5zi7/49a7n47po4ttqjl7.o
        target/debug/incremental/ObserverRust-1pmze1pc2rwr5/s-f4h8s9lgbd-1anl1n8-2w6xuhilk5zi7/4oc10dk278mpk1vy.o
        target/debug/incremental/ObserverRust-1pmze1pc2rwr5/s-f4h8s9lgbd-1anl1n8-2w6xuhilk5zi7/4xq48u46a1pwiqn7.o
        target/debug/incremental/ObserverRust-1pmze1pc2rwr5/s-f4h8s9lgbd-1anl1n8-2w6xuhilk5zi7/4yh8x2b62dcih00t.o
        target/debug/incremental/ObserverRust-1pmze1pc2rwr5/s-f4h8s9lgbd-1anl1n8-2w6xuhilk5zi7/4ypvbwho0bu5tnww.o
        target/debug/incremental/ObserverRust-1pmze1pc2rwr5/s-f4h8s9lgbd-1anl1n8-2w6xuhilk5zi7/81jpvh8cn5k8ng8.o
        target/debug/incremental/ObserverRust-1pmze1pc2rwr5/s-f4h8s9lgbd-1anl1n8-2w6xuhilk5zi7/8xzrsc1ux72v29j.o
        target/debug/incremental/ObserverRust-1pmze1pc2rwr5/s-f4h8s9lgbd-1anl1n8-2w6xuhilk5zi7/98g0d9x8aw3akpe.o
        target/debug/incremental/ObserverRust-1pmze1pc2rwr5/s-f4h8s9lgbd-1anl1n8-2w6xuhilk5zi7/9elsx31vb4it187.o
        target/debug/incremental/ObserverRust-1pmze1pc2rwr5/s-f4h8s9lgbd-1anl1n8-2w6xuhilk5zi7/c6lbtaiefvx3wya.o
        target/debug/incremental/ObserverRust-1pmze1pc2rwr5/s-f4h8s9lgbd-1anl1n8-2w6xuhilk5zi7/dep-graph.bin
        target/debug/incremental/ObserverRust-1pmze1pc2rwr5/s-f4h8s9lgbd-1anl1n8-2w6xuhilk5zi7/oa3rad818d8sgn4.o
        target/debug/incremental/ObserverRust-1pmze1pc2rwr5/s-f4h8s9lgbd-1anl1n8-2w6xuhilk5zi7/query-cache.bin
        target/debug/incremental/ObserverRust-1pmze1pc2rwr5/s-f4h8s9lgbd-1anl1n8-2w6xuhilk5zi7/sace2zi1c4stee3.o
        target/debug/incremental/ObserverRust-1pmze1pc2rwr5/s-f4h8s9lgbd-1anl1n8-2w6xuhilk5zi7/work-products.bin
        target/debug/incremental/ObserverRust-1pmze1pc2rwr5/s-f4h8s9lgbd-1anl1n8-2w6xuhilk5zi7/y08g5q2x813c4wx.o
        target/debug/incremental/ObserverRust-1pmze1pc2rwr5/s-f4h8s9lgbd-1anl1n8-2w6xuhilk5zi7/z9ox7biyn1otfln.o
        target/debug/incremental/ObserverRust-1pmze1pc2rwr5/s-f4h8s9lgbd-1anl1n8.lock
        target/debug/incremental/ObserverRust-2avkcpviii9wu/s-f4953zm7ek-lw8xpm-3umnglnc3yoqy/dep-graph.bin
        target/debug/incremental/ObserverRust-2avkcpviii9wu/s-f4953zm7ek-lw8xpm-3umnglnc3yoqy/query-cache.bin
        target/debug/incremental/ObserverRust-2avkcpviii9wu/s-f4953zm7ek-lw8xpm-3umnglnc3yoqy/work-products.bin
        target/debug/incremental/ObserverRust-2avkcpviii9wu/s-f4953zm7ek-lw8xpm.lock
        target/debug/incremental/ObserverRust-2r9z3r2fmqe61/s-f4953zm7e0-1o6jcab-37fx0t96qe7jb/dep-graph.bin
        target/debug/incremental/ObserverRust-2r9z3r2fmqe61/s-f4953zm7e0-1o6jcab-37fx0t96qe7jb/query-cache.bin
        target/debug/incremental/ObserverRust-2r9z3r2fmqe61/s-f4953zm7e0-1o6jcab-37fx0t96qe7jb/work-products.bin
        target/debug/incremental/ObserverRust-2r9z3r2fmqe61/s-f4953zm7e0-1o6jcab.lock
        target/debug/libObserverRust-a3aadf8fd73c6d18.d
        target/debug/libObserverRust-a3aadf8fd73c6d18.rmeta
        target/debug/libObserverRust.d
        target/debug/libObserverRust.rmeta
        target/debug/ObserverRust
        target/debug/ObserverRust.d
        Cargo.lock
        Cargo.toml)
